# Ten-lines-or-less

./: .buildinfo  .pre-commit-config.yaml  .travis.yml  MonthView.py  README.html  README.md  appex_dump.py  appex_local_copy.py  attitude_to_multipeer.py  backup_editor_file.py  battery_info.py  battery_infp.py  birthdays.py  bit_filpper.py  born_on_a_friday.py  cd_ls_pwd.py  daze_left.py  dropbox_change _watcher  dropbox_change_watcher.py  elapsed_time.py  fake_format.py  fake_format_.py  files_and_folders.py  form_dialog_from_fields_dict.py  full_screen_view.py  genindex.html  git_conflicts_in_my_open_pull_requests.py  image_file.py  index.html  index.md  json_readable.py  not_implemented.py  objects.inv  omz_env.py  platform_info.py  pyproject.toml  pythonista_app_path.py  pythonista_docs.py  pythonista_version.py  pyui_from_clipboard  (+24 more)
.github/: FUNDING.yml  main.workflow
.github/workflows/: lint_python.yml  pre-commit.yml  push.yml  sphinx.yml  trending_python.yml  was_sphinx.yml.DISABLED
_sources/: README.md.txt  index.md.txt
code/0.1.12/: junk.txt
docs/: README.md  conf.py  requirements.txt
src/: appex_local_copy.py  attitude_to_multipeer.py  backup_editor_file.py  cd_ls_pwd.py  cowsay.py  fake_format.py  files_and_folders.py  full_screen_view.py  not_implemented.py  pythonista_docs.py  set_theory.py  sudoku_revisited.py  tarball_from_dropbox.py  trending_python.py  trending_python_tester.py  weather_where_you_are.py  world_bank_data.py  zap_carriage_returns.py
